--- a/Block_EnginInt2.html
+++ b/Block_EnginInt2.html
@@ -9,11 +9,12 @@
 
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
-	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="engin.css">
 
-	<script src="Language.js" defer></script>
-	<script src="animator.js" defer></script>
+	<link rel="stylesheet" href="enicss/animator.css">
+	<link rel="stylesheet" href="enicss/engin.css">
+
+	<script src="enijs/Language.js" defer></script>
+	<script src="enijs/animator.js" defer></script>
 	<style>
 		body {
 			visibility: hidden;
@@ -66,7 +67,7 @@
 
 	<script>
 		async function loadAllTranslations() {
-			const p1 = await LoadTranslations('translations01-engin.txt');
+			const p1 = await LoadTranslations('enilang/translations01-engin.txt');
 			await Promise.all([p1]);
 		}
 	</script>
