--- a/Block_Uvod1.html
+++ b/Block_Uvod1.html
@@ -14,7 +14,7 @@
 			font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
 		}
 	</style>
-	<link rel="stylesheet" href="uvod1.css">
+	<link rel="stylesheet" href="enicss/uvod1.css">
 </head>
 
 <body>
