--- a/Kontakty_enitech.html
+++ b/Kontakty_enitech.html
@@ -9,7 +9,7 @@
 	<link rel="icon" href="favicona-enitech.png">
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
-	<link rel="stylesheet" href="kontakt3.css">
+	<link rel="stylesheet" href="enicss/kontakt3.css">
 	<style>
 		.kontakt3-cell {
 			background:
