--- a/Block_Engin.html
+++ b/Block_Engin.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--klucove pre mobilne zariadenia-->
   <title>Block_Engineering.html</title>
   <link rel="icon" href="favicona-enitech.png">
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet"> -->
   <link rel="stylesheet" href="fonts-poppins.css" />
   <link rel="stylesheet" href="fonts-open-sans.css">
   <style>
@@ -16,15 +15,14 @@
       font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
     }
   </style>
-  <link rel="stylesheet" href="root.css">
-  <link rel="stylesheet" href="animator.css">
-  <link rel="stylesheet" href="menu.css">
-  <link rel="stylesheet" href="UvodHero.css">
+  <link rel="stylesheet" href="enicss/root.css">
+  <link rel="stylesheet" href="enicss/animator.css">
+  <link rel="stylesheet" href="enicss/menu.css">
+  <link rel="stylesheet" href="enicss/UvodHero.css">
 
-  <!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalosou DOMConentLoaded-->
-  <script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
-  <script src="Language.js" defer></script>
-  <script src="animator.js" defer></script>
+  <script src="enijs/menu.js" defer></script>
+  <script src="enijs/Language.js" defer></script>
+  <script src="enijs/animator.js" defer></script>
 </head>
 <body>
   <div id="Menu-div-dst">
@@ -47,18 +45,16 @@
     </section>
   </div>
 
-  <script src="ImportBlock.js" type="text/javascript"></script>  <!-- funkcie js: importovanie blokov -->
+  <script src="enijs/ImportBlock.js" type="text/javascript"></script>
 
   <script>
     document.addEventListener("DOMContentLoaded", async () => {
       await ImportDiv  ("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
       await new Promise(requestAnimationFrame);
-      // Načítanie prekladov po načítaní DOM
-      await LoadTranslations('translations00.txt');
-      await LoadTranslations('translations01-engin.txt');
+      await LoadTranslations('enilang/translations00.txt');
+      await LoadTranslations('enilang/translations01-engin.txt');
       await UpdateTexts();
       await new Promise(requestAnimationFrame);
-      // Spustenie animácie
       Animator.register("#engin_animate-id", "animate-slide-in-bounce");
       document.body.style.visibility = "visible"; // zobraz stránku až teraz    
     });
