--- a/Block_IT.html
+++ b/Block_IT.html
@@ -7,6 +7,7 @@
   <link rel="icon" href="favicona-enitech.png">
   <link rel="stylesheet" href="fonts-poppins.css" />
   <link rel="stylesheet" href="fonts-open-sans.css">
+
   <style>
     body { visibility: hidden; margin: 0; font-family: "Montserrat", Arial, serif; } /*visibility sa vrati az po nacitani*/
     body, html {
@@ -15,15 +16,14 @@
       font-family: "Poppins", "Open sans", Arial, Tahoma, sans-serif;
     }
   </style>
-  <link rel="stylesheet" href="root.css">
-  <link rel="stylesheet" href="animator.css">
-  <link rel="stylesheet" href="menu.css">
-  <link rel="stylesheet" href="UvodHero.css">
+  <link rel="stylesheet" href="enicss/root.css">
+  <link rel="stylesheet" href="enicss/animator.css">
+  <link rel="stylesheet" href="enicss/menu.css">
+  <link rel="stylesheet" href="enicss/UvodHero.css">
 
-  <!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalosou DOMConentLoaded-->
-  <script src="menu.js" defer></script> <!-- funkcie js: ovladanie menu -->
-  <script src="Language.js" defer></script>
-  <script src="animator.js" defer></script>
+  <script src="enijs/menu.js" defer></script>
+  <script src="enijs/Language.js" defer></script>
+  <script src="enijs/animator.js" defer></script>
 </head>
 <body>
   <div id="Menu-div-dst">
@@ -49,14 +49,14 @@
     </section>
   </div>
 
-  <script src="ImportBlock.js" type="text/javascript"></script>  <!-- funkcie js: importovanie blokov -->
+  <script src="enijs/ImportBlock.js" type="text/javascript"></script>
 
   <script>
     document.addEventListener("DOMContentLoaded", async () => {
       await ImportDiv  ("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
       await new Promise(requestAnimationFrame);
-      await LoadTranslations('translations00.txt');
-      await LoadTranslations('translations02-it.txt');
+      await LoadTranslations('enilang/translations00.txt');
+      await LoadTranslations('enilang/translations02-it.txt');
       await UpdateTexts();
       await new Promise(requestAnimationFrame);
       // Spustenie animácie
