--- a/Block_IT2.html
+++ b/Block_IT2.html
@@ -6,16 +6,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Block_IT2.html</title>
 	<link rel="icon" href="favicona-enitech.png" />
-	<!-- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500,700&display=swap" rel="stylesheet" /> -->
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
-	<!-- <link rel="stylesheet" href="fonts-quicksand.css"> -->
-	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="it2.css">
-	<!-- <link rel="stylesheet" href="it3.css"> -->
 
-	<script src="Language.js" defer></script>
-	<script src="animator.js" defer></script>
+	<link rel="stylesheet" href="enicss/animator.css">
+	<link rel="stylesheet" href="enicss/it2.css">
+
+	<script src="enijs/Language.js" defer></script>
+	<script src="enijs/animator.js" defer></script>
 </head>
 
 <body>
@@ -83,7 +81,7 @@
 
 	<script>
 		async function loadAllTranslations() {
-			const p1 = await LoadTranslations('translations02-it.txt');
+			const p1 = await LoadTranslations('enilang/translations02-it.txt');
 			await Promise.all([p1]);
 		}
 	</script>
