--- a/Block_IT4.html
+++ b/Block_IT4.html
@@ -8,13 +8,13 @@
 	<link rel="icon" href="favicona-enitech.png" />
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
-	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="it.css">
-	<!-- <link rel="stylesheet" href="it4.css"> -->
+
+	<link rel="stylesheet" href="enicss/animator.css">
+	<link rel="stylesheet" href="enicss/it.css">
 	<style>
 	</style>
-	<script src="Language.js" defer></script>
-	<script src="animator.js" defer></script>
+	<script src="enijs/Language.js" defer></script>
+	<script src="enijs/animator.js" defer></script>
 </head>
 
 <body>
@@ -67,7 +67,7 @@
 
 	<script>
 		async function loadAllTranslations() {
-			const p1 = await LoadTranslations('translations02-it.txt');
+			const p1 = await LoadTranslations('enilang/translations02-it.txt');
 			await Promise.all([p1]);
 		}
 	</script>
