--- a/Block_Kariera.html
+++ b/Block_Kariera.html
@@ -9,17 +9,17 @@
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
 
-	<link rel="stylesheet" href="root.css">
-	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="kariera.css">
-	<link rel="stylesheet" href="karieracv.css">
-	<link rel="stylesheet" href="formular.css">
+	<link rel="stylesheet" href="enicss/root.css">
+	<link rel="stylesheet" href="enicss/animator.css">
+	<link rel="stylesheet" href="enicss/kariera.css">
+	<link rel="stylesheet" href="enicss/karieracv.css">
+	<link rel="stylesheet" href="enicss/formular.css">
 
-	<script src="Language.js" defer></script> <!-- funkcie js: prepinanie jazykov  SK / DE / EN -->
-	<script src="kariera.js" defer></script>
-	<script src="animator.js" defer></script>
+	<script src="enijs/Language.js" defer></script> <!-- funkcie js: prepinanie jazykov  SK / DE / EN -->
+	<script src="enijs/kariera.js" defer></script>
+	<script src="enijs/animator.js" defer></script>
 
-	<script src="karieracv.js" type="text/javascript"></script>
+	<script src="enijs/karieracv.js" type="text/javascript"></script>
 </head>
 <style>
     body, html {
@@ -71,7 +71,7 @@
 			</div>
 		</div>
 	</div>
- 	<script src="ImportBlock.js" type="text/javascript"></script>
+ 	<script src="enijs/ImportBlock.js" type="text/javascript"></script>
 	<script>
 		document.addEventListener("DOMContentLoaded", async () => {
 			kariera_registerButtons();
@@ -83,8 +83,8 @@
 
             await ImportDiv("Block_KarieraCV.html", "KarieraCV-div-src", "KarieraCV-div-dst");
 			await openProjects_fetchPosts(); // naplni kariera-grid, kariera-detail, kariera-pagination
-			await LoadTranslations('translations05-kontakt.txt');
-			await LoadTranslations('translations08-kar.txt');
+			await LoadTranslations('enilang/translations05-kontakt.txt');
+			await LoadTranslations('enilang/translations08-kar.txt');
 			await UpdateTexts();
 			// await KarieraCV_addEventListeners();
       		Animator.registerAll(".formular-animate-line", "animate-width-grow");
