--- a/Block_KarieraCV.html
+++ b/Block_KarieraCV.html
@@ -9,16 +9,16 @@
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
 
-	<link rel="stylesheet" href="root.css">
-	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="menu.css">
-	<link rel="stylesheet" href="formular.css">
+	<link rel="stylesheet" href="enicss/root.css">
+	<link rel="stylesheet" href="enicss/animator.css">
+	<link rel="stylesheet" href="enicss/menu.css">
+	<link rel="stylesheet" href="enicss/formular.css">
 
-	<script src="menu.js" defer></script>
-	<script src="Language.js" defer></script>
-	<script src="animator.js" defer></script>
+	<script src="enijs/menu.js" defer></script>
+	<script src="enijs/Language.js" defer></script>
+	<script src="enijs/animator.js" defer></script>
 
-	<script src="karieracv.js" type="text/javascript"></script>
+	<script src="enijs/karieracv.js" type="text/javascript"></script>
 </head>
 <style>
 	body,
@@ -122,29 +122,30 @@
 			<!-- Dialogove okno submit -->
 			<div class="formular-dialog-overlay" id="id-cv-submit-dialog" style="display: none;">
 				<div class="formular-dialog">
-					<p id="id-cv-submit-dialog-p"> <span lang-code="08034">Formulár by sa odoslal s počtom príloh: </span><span id="id-cv-files-count"></span></p>
+					<p id="id-cv-submit-dialog-p"></p>
 					<button onclick="do_cv_closeSubmitDialog()">OK</button>
 				</div>
 			</div>
 			<!-- Dialogove okno pre alerty -->
 			<div class="formular-dialog-overlay" id="id-cv-alert-dialog" style="display: none;">
 				<div class="formular-dialog">
-					<p id="id-cv-alert-text-max4" lang-code="08036" style="display: none;">Maximálny počet príloh je 4</p>
-					<p id="id-cv-alert-text-max8MB" lang-code="08037" style="display: none;">Celková veľkosť príloh nesmie prekročiť 8 MB</p>
+					<p id="id-cv-alert-text-max4" lang-code="08036" style="display: none;">Maximálny počet príloh je 4.</p>
+					<p id="id-cv-alert-text-max8MB" lang-code="08037" style="display: none;">Celková veľkosť príloh nesmie prekročiť 8 MB.</p>
+					<p id="id-cv-alert-text-maxFile2MB" lang-code="08038" style="display: none;">Maximálna veľkosť jednej prílohy je 2 MB.</p>
 					<button onclick="cv_hideAlertDialog()">OK</button>
 				</div>
 			</div>
 
 		</div>
 	</div>
-	<script src="ImportBlock.js" type="text/javascript"></script>
+	<script src="enijs/ImportBlock.js" type="text/javascript"></script>
 
 	<script>
 		document.addEventListener("DOMContentLoaded", async () => {
 			await ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
 			await new Promise(requestAnimationFrame);
-			await LoadTranslations('translations00.txt');
-			await LoadTranslations('translations08-kar.txt');
+			await LoadTranslations('enilang/translations00.txt');
+			await LoadTranslations('enilang/translations08-kar.txt');
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
 
