--- a/Block_Kontakt1.html
+++ b/Block_Kontakt1.html
@@ -9,16 +9,15 @@
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
 
-	<link rel="stylesheet" href="root.css">
-	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="menu.css">
-	<link rel="stylesheet" href="kontakt1.css">
-	<link rel="stylesheet" href="formular.css">
+	<link rel="stylesheet" href="enicss/root.css">
+	<link rel="stylesheet" href="enicss/animator.css">
+	<link rel="stylesheet" href="enicss/menu.css">
+	<link rel="stylesheet" href="enicss/kontakt1.css">
+	<link rel="stylesheet" href="enicss/formular.css">
 
-	<!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalosou DOMContentLoaded-->
-	<script src="menu.js" defer></script>
-	<script src="Language.js" defer></script>
-	<script src="animator.js" defer></script>
+	<script src="enijs/menu.js" defer></script>
+	<script src="enijs/Language.js" defer></script>
+	<script src="enijs/animator.js" defer></script>
 </head>
 
 <body>
@@ -108,16 +107,15 @@
 		</div>
 	</div>
 
-	<script src="ImportBlock.js" type="text/javascript"></script>
-	<script src="kontakt1.js" type="text/javascript"></script>
+	<script src="enijs/ImportBlock.js" type="text/javascript"></script>
+	<script src="enijs/kontakt1.js" type="text/javascript"></script>
 
 	<script>
 		document.addEventListener("DOMContentLoaded", async () => {
 			await ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
 			await new Promise(requestAnimationFrame);
-			// Načítanie prekladov po načítaní DOM
-			await LoadTranslations('translations00.txt');
-			await LoadTranslations('translations05-kontakt.txt');
+			await LoadTranslations('enilang/translations00.txt');
+			await LoadTranslations('enilang/translations05-kontakt.txt');
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
 
