--- a/Block_Onas1.html
+++ b/Block_Onas1.html
@@ -9,12 +9,12 @@
 
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
-	<link rel="stylesheet" href="animator.css">
-	<!-- <link rel="stylesheet" href="onas1.css"> -->
-	<link rel="stylesheet" href="onas.css">
 
-	<script src="Language.js" defer></script>
-	<script src="animator.js" defer></script>
+	<link rel="stylesheet" href="enicss/animator.css">
+	<link rel="stylesheet" href="enicss/onas.css">
+
+	<script src="enijs/Language.js" defer></script>
+	<script src="enijs/animator.js" defer></script>
 	<style>
 		body {
 			visibility: hidden;
@@ -53,7 +53,7 @@
 
 	<script>
 		async function loadAllTranslations() {
-			const p1 = await LoadTranslations('translations00.txt');
+			const p1 = await LoadTranslations('enilang/translations00.txt');
 			await Promise.all([p1]);
 		}
 	</script>
