--- a/indexEngin.html
+++ b/indexEngin.html
@@ -8,7 +8,7 @@
 	<link rel="icon" href="favicona-enitech.png">
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
-	<link rel="stylesheet" href="root.css">
+	<link rel="stylesheet" href="enicss/root.css">
 	<style>
 		body {
 			visibility: hidden;
@@ -18,22 +18,15 @@
 		/*visibility sa vrati az po nacitani*/
 	</style>
 
-	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="menu.css">
-	<link rel="stylesheet" href="UvodHero.css">
-	<link rel="stylesheet" href="engin.css">
-	<!-- <link rel="stylesheet" href="enginint1.css">
-	<link rel="stylesheet" href="enginint2.css">
-	<link rel="stylesheet" href="enginint3.css">
-	<link rel="stylesheet" href="enginint4.css">
-	<link rel="stylesheet" href="enginext1.css">
-	<link rel="stylesheet" href="enginelekt1.css">
-	<link rel="stylesheet" href="enginautom1.css"> -->
-	<link rel="stylesheet" href="footer.css">
+	<link rel="stylesheet" href="enicss/animator.css">
+	<link rel="stylesheet" href="enicss/menu.css">
+	<link rel="stylesheet" href="enicss/UvodHero.css">
+	<link rel="stylesheet" href="enicss/engin.css">
+	<link rel="stylesheet" href="enicss/footer.css">
 
-	<script src="Language.js" defer></script>
-	<script src="animator.js" defer></script>
-	<script src="menu.js" defer></script>
+	<script src="enijs/Language.js" defer></script>
+	<script src="enijs/animator.js" defer></script>
+	<script src="enijs/menu.js" defer></script>
 	<!-- <script src="wordpress_footer.js" defer></script> -->
 </head>
 
@@ -69,8 +62,8 @@
 	<div id="Footer-div-dst">
 	</div>
 
-	<script src="ImportBlock.js" type="text/javascript"></script> 
-	<script src="scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
+	<script src="enijs/ImportBlock.js" type="text/javascript"></script> 
+	<script src="enijs/scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
 
 	<script>
 		async function loadDivBlocks() {
@@ -98,21 +91,13 @@
 			// frame cyklus trva kazdych 16ms a az ked je vsetko dokoncene (DOM + predchadzajuca cast js), tak nastane "await new Promise(requestAnimationFrame);"
 			// A vtedy mozem spustit dalsi script. Je to tzv. kooperativny multitasking
 			// await Footer_fill_ponuky();
-			await LoadTranslations('translations00.txt');
-			await LoadTranslations('translations01-engin.txt');
-			await LoadTranslations('translations09-foot.txt');
+			await LoadTranslations('enilang/translations00.txt');
+			await LoadTranslations('enilang/translations01-engin.txt');
+			await LoadTranslations('enilang/translations09-foot.txt');
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
 			Animator.register("#engin_animate-id", "animate-slide-in-bounce");
-			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
-			// Animator.registerAll(".footer-line", "animate-width-grow");
-			Animator.registerAll(".enginint1-header-line", "animate-width-grow");
-			Animator.registerAll(".enginint2-header-line", "animate-width-grow");
-			Animator.registerAll(".enginint3-header-line", "animate-width-grow");
-			Animator.registerAll(".enginint4-header-line", "animate-width-grow");
-			Animator.registerAll(".enginext1-header-line", "animate-width-grow");
-			Animator.registerAll(".enginelekt1-header-line", "animate-width-grow");
-			Animator.registerAll(".enginautom1-header-line", "animate-width-grow");
+			Animator.registerAll(".engin-header-line", "animate-width-grow");
 			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
 			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
 		});    
