--- a/indexIT.html
+++ b/indexIT.html
@@ -14,7 +14,7 @@
 
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
-	<link rel="stylesheet" href="root.css">
+	<link rel="stylesheet" href="enicss/root.css">
 	<style>
 		body {
 			visibility: hidden;
@@ -25,19 +25,17 @@
 		/*visibility sa vrati az po nacitani*/
 	</style>
 
-	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="menu.css">
-	<link rel="stylesheet" href="UvodHero.css">
-	<link rel="stylesheet" href="it1.css">
-	<link rel="stylesheet" href="it2.css">
-	<link rel="stylesheet" href="it.css">
-	<!-- <link rel="stylesheet" href="it4.css">
-	<link rel="stylesheet" href="it5.css"> -->
-	<link rel="stylesheet" href="footer.css">
+	<link rel="stylesheet" href="enicss/animator.css">
+	<link rel="stylesheet" href="enicss/menu.css">
+	<link rel="stylesheet" href="enicss/UvodHero.css">
+	<link rel="stylesheet" href="enicss/it1.css">
+	<link rel="stylesheet" href="enicss/it2.css">
+	<link rel="stylesheet" href="enicss/it.css">
+	<link rel="stylesheet" href="enicss/footer.css">
 
-	<script src="Language.js" defer></script>
-	<script src="animator.js" defer></script>
-	<script src="menu.js" defer></script>
+	<script src="enijs/Language.js" defer></script>
+	<script src="enijs/animator.js" defer></script>
+	<script src="enijs/menu.js" defer></script>
 	<!-- <script src="wordpress_footer.js" defer></script>  -->
 </head>
 
@@ -67,8 +65,8 @@
 	<div id="Footer-div-dst">
 	</div>
 
-	<script src="ImportBlock.js" type="text/javascript"></script> <!-- funkcie js: importovanie blokov -->
-	<script src="scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
+	<script src="enijs/ImportBlock.js" type="text/javascript"></script>
+	<script src="enijs/scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
 
 	<script>
 		async function loadDivBlocks() {
@@ -80,31 +78,28 @@
 			const p6 = ImportDiv("Block_IT4.html", "IT4-div-src", "IT4-div-dst");
 			const p7 = ImportDiv("Block_IT5.html", "IT5-div-src", "IT5-div-dst");
 			const p9 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-			await Promise.all([p1, p2, p3, p4, p5, p6, p7, p9]); // vsetky mozu bezat paralelne
+			await Promise.all([p1, p2, p3, p4, p5, p6, p7, p9]);
 		}
 		async function loadAllTranslations() {
-			const p1 = LoadTranslations('translations00.txt');
-			const p2 = LoadTranslations('translations02-it.txt');
-			const p3 = LoadTranslations('translations09-foot.txt');
+			const p1 = LoadTranslations('enilang/translations00.txt');
+			const p2 = LoadTranslations('enilang/translations02-it.txt');
+			const p3 = LoadTranslations('enilang/translations09-foot.txt');
 			await Promise.all([p1, p2, p3]);
 		}
 	</script>
 
 	<script>
-		document.addEventListener("DOMContentLoaded", async () => { // zabalene do anonymnej async () => {} funkcie, aby bolo mozne volat "await"
+		document.addEventListener("DOMContentLoaded", async () => {
 			await loadDivBlocks();
 			await new Promise(requestAnimationFrame);
-			// await Footer_fill_ponuky();
 			await loadAllTranslations();
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
 			Animator.register("#IT_animate-id", "animate-slide-in-bounce");
-			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
 			Animator.registerAll(".it1-line", "animate-width-grow");
 			Animator.registerAll(".it2-line", "animate-width-grow");
 			Animator.registerAll(".it-line", "animate-width-grow");
 			Animator.registerAll(".it-grid-item-line", "animate-width-grow"); // doprava rastuce ciary
-			// Animator.registerAll(".footer-line", "animate-width-grow");
 			restoreScrollYPosition(); // navrat na poziciu, na ktorej bolo stlacene F5
 			document.body.style.visibility = "visible"; // zobraz stránku až teraz    
 		});    
