--- a/indexKontakt.html
+++ b/indexKontakt.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-	<link rel="stylesheet" href="root.css">
+	<link rel="stylesheet" href="enicss/root.css">
 	<style>
 		body {
 			visibility: hidden;
@@ -20,19 +20,19 @@
 		/*visibility sa vrati az po nacitani*/
 	</style>
 
-	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="menu.css">
-	<link rel="stylesheet" href="kontakt1.css">
-	<link rel="stylesheet" href="formular.css">
-	<link rel="stylesheet" href="kontakt2.css">
-	<link rel="stylesheet" href="kontakt3.css">
-	<link rel="stylesheet" href="footer.css">
+	<link rel="stylesheet" href="enicss/animator.css">
+	<link rel="stylesheet" href="enicss/menu.css">
+	<link rel="stylesheet" href="enicss/kontakt1.css">
+	<link rel="stylesheet" href="enicss/formular.css">
+	<link rel="stylesheet" href="enicss/kontakt2.css">
+	<link rel="stylesheet" href="enicss/kontakt3.css">
+	<link rel="stylesheet" href="enicss/footer.css">
 
 	<!-- Nasledovne scripty s defer sa spracuju az po nacitani celeho body tesne pred udalosou DOMContentLoaded-->
-	<script src="Language.js" defer></script>
-	<script src="menu.js" defer></script>
-	<script src="animator.js" defer></script>
-	<script src="wordpress_footer.js" defer></script> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
+	<script src="enijs/Language.js" defer></script>
+	<script src="enijs/menu.js" defer></script>
+	<script src="enijs/animator.js" defer></script>
+	<!-- <script src="enijs/wordpress_footer.js" defer></script> --> <!-- Nacitanie a spracovanie ponuk od WordPressu-->
 </head>
 
 <body>
@@ -52,11 +52,11 @@
 	<div id="Footer-div-dst">
 	</div>
 
-	<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-	<script src="ImportBlock.js" type="text/javascript"></script> <!-- funkcie js: importovanie blokov -->
-	<script src="scrolly_save.js" type="text/javascript" defer></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
-	<script src="kontakt1.js" type="text/javascript"></script>
-	<script src="kontakt2_leaflet.js" type="text/javascript" defer></script>
+	<script src="enijs/ImportBlock.js" type="text/javascript"></script>
+	<script src="enijs/scrolly_save.js" type="text/javascript" defer></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
+	<script src="enijs/kontakt1.js" type="text/javascript"></script>
+	<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+	<script src="enijs/kontakt2_leaflet.js" type="text/javascript" defer></script>
 
 	<script>
 		async function loadDivBlocks() {
@@ -65,7 +65,7 @@
 			const p3 = ImportDiv("Block_Kontakt2.html", "kontakt2-div-src", "Kontakt2-div-dst");
 			const p4 = ImportDiv("Block_Kontakt3.html", "Kontakt3-div-src", "Kontakt3-div-dst");
 			const p5 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-			await Promise.all([p1, p2, p3, p4, p5]); // vsetky ImportDiv mozu bezat paralelne
+			await Promise.all([p1, p2, p3, p4, p5]);
 		}
 	</script>
 
@@ -74,11 +74,9 @@
 			await loadDivBlocks()
 
 			await new Promise(requestAnimationFrame);
-			// Načítanie prekladov po načítaní DOM
-			// await Footer_fill_ponuky();
-			await LoadTranslations('translations00.txt');
-			await LoadTranslations('translations05-kontakt.txt');
-			await LoadTranslations('translations09-foot.txt');
+			await LoadTranslations('enilang/translations00.txt');
+			await LoadTranslations('enilang/translations05-kontakt.txt');
+			await LoadTranslations('enilang/translations09-foot.txt');
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
 			await kontakt1_addEventListeners();
@@ -89,9 +87,6 @@
 			Animator.registerAll(".kontakt2-line", "animate-width-grow");
 			Animator.registerAll(".kontakt3-line", "animate-width-grow");
 			Animator.register("#id-kontakt2-animate-content", "animate-rotateFlipIn");
-			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
-			// Animator.registerAll(".footer-line", "animate-width-grow");
-			// *** nový blok: oprava scrollu podľa hashu (ak je) ***
 			if (window.location.hash) {
 				const targetEl = document.querySelector(window.location.hash);
 				if (targetEl) {
