--- a/indexOnas.html
+++ b/indexOnas.html
@@ -8,7 +8,7 @@
 	<link rel="icon" href="favicona-enitech.png">
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
-	<link rel="stylesheet" href="root.css">
+	<link rel="stylesheet" href="enicss/root.css">
 	<style>
 		body {
 			visibility: hidden;
@@ -18,21 +18,18 @@
 		/*visibility sa vrati az po nacitani*/
 	</style>
 
-	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="menu.css">
-	<link rel="stylesheet" href="UvodHero.css">
-	<link rel="stylesheet" href="uvod1.css">
-	<!-- <link rel="stylesheet" href="onas1.css"> -->
-	<!-- <link rel="stylesheet" href="onas2.css"> -->
-	<link rel="stylesheet" href="onas.css">
-	<link rel="stylesheet" href="ref.css">
-	<link rel="stylesheet" href="footer.css">
+	<link rel="stylesheet" href="enicss/animator.css">
+	<link rel="stylesheet" href="enicss/menu.css">
+	<link rel="stylesheet" href="enicss/UvodHero.css">
+	<link rel="stylesheet" href="enicss/uvod1.css">
+	<link rel="stylesheet" href="enicss/onas.css">
+	<link rel="stylesheet" href="enicss/ref.css">
+	<link rel="stylesheet" href="enicss/footer.css">
 
-	<script src="Language.js" defer></script>
-	<script src="animator.js" defer></script>
-	<script src="menu.js" defer></script>
-	<!-- <script src="wordpress_footer.js" defer></script> -->
-	<script src="onas2.js" defer></script> <!-- modalne okno s certifikatom -->
+	<script src="enijs/Language.js" defer></script>
+	<script src="enijs/animator.js" defer></script>
+	<script src="enijs/menu.js" defer></script>
+	<script src="enijs/onas2.js" defer></script> <!-- modalne okno s certifikatom -->
 </head>
 
 <body>
@@ -62,8 +59,8 @@
 	<div id="Footer-div-dst">
 	</div>
 
-	<script src="ImportBlock.js" type="text/javascript"></script>
-	<script src="scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
+	<script src="enijs/ImportBlock.js" type="text/javascript"></script>
+	<script src="enijs/scrolly_save.js" type="text/javascript"></script> <!-- zapamata aktualnu poziciu, aby to po F5 neskocilo na zaciatok -->
 
 	<script>
 		async function loadDivBlocks() {
@@ -84,17 +81,14 @@
 			await loadDivBlocks();
 
 			await new Promise(requestAnimationFrame);
-			// await Footer_fill_ponuky();
-			await LoadTranslations('translations00.txt');
-			await LoadTranslations('translations01-engin.txt');
-			await LoadTranslations('translations07-ref.txt');
-			await LoadTranslations('translations09-foot.txt');
+			await LoadTranslations('enilang/translations00.txt');
+			await LoadTranslations('enilang/translations01-engin.txt');
+			await LoadTranslations('enilang/translations07-ref.txt');
+			await LoadTranslations('enilang/translations09-foot.txt');
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
 			Animator.register("#uvod-hero_animate-id", "animate-slide-in-bounce");
 			Animator.register("#id-ref-onas3-animate", "animate-rotateFlipIn");
-			// Animator.registerAll(".onas1-header-line", "animate-width-grow");
-			// Animator.registerAll(".onas2-header-line", "animate-width-grow");
 			Animator.registerAll(".onas-header-line", "animate-width-grow");
 			Animator.registerAll(".ref-onas3-header-line", "animate-width-grow");
 			Animator.register("#idCertificateBtn", "animate-double-shake");
