--- a/indexRef.html
+++ b/indexRef.html
@@ -14,7 +14,7 @@
 
 	<link rel="stylesheet" href="fonts-poppins.css" />
 	<link rel="stylesheet" href="fonts-open-sans.css">
-	<link rel="stylesheet" href="root.css">
+	<link rel="stylesheet" href="enicss/root.css">
 	<style>
 		body {
 			visibility: hidden;
@@ -25,23 +25,17 @@
 		/*visibility sa vrati az po nacitani*/
 	</style>
 
-	<link rel="stylesheet" href="animator.css">
-	<link rel="stylesheet" href="menu.css">
-	<link rel="stylesheet" href="UvodHero.css">
-	<link rel="stylesheet" href="ref.css">
-	<link rel="stylesheet" href="ref-flex.css">
-	<!-- <link rel="stylesheet" href="ref1.css">
-	<link rel="stylesheet" href="ref2.css">
-	<link rel="stylesheet" href="ref3.css">
-	<link rel="stylesheet" href="ref4.css">
-	<link rel="stylesheet" href="ref5.css"> -->
-	<!-- <link rel="stylesheet" href="ref-ovl.css"> -->
-	<link rel="stylesheet" href="ref-tooltip.css">
-	<link rel="stylesheet" href="footer.css">
+	<link rel="stylesheet" href="enicss/animator.css">
+	<link rel="stylesheet" href="enicss/menu.css">
+	<link rel="stylesheet" href="enicss/UvodHero.css">
+	<link rel="stylesheet" href="enicss/ref.css">
+	<link rel="stylesheet" href="enicss/ref-flex.css">
+	<link rel="stylesheet" href="enicss/ref-tooltip.css">
+	<link rel="stylesheet" href="enicss/footer.css">
 
-	<script src="Language.js" defer></script>
-	<script src="animator.js" defer></script> 
-	<script src="menu.js" defer></script> 
+	<script src="enijs/Language.js" defer></script>
+	<script src="enijs/animator.js" defer></script> 
+	<script src="enijs/menu.js" defer></script> 
 	<!-- <script src="wordpress_footer.js" defer></script> -->
 </head>
 
@@ -81,8 +75,8 @@
 	<div id="Footer-div-dst">
 	</div>
 
-	<script src="ImportBlock.js" type="text/javascript"></script>
-	<script src="scrolly_save.js" type="text/javascript"></script> 
+	<script src="enijs/ImportBlock.js" type="text/javascript"></script>
+	<script src="enijs/scrolly_save.js" type="text/javascript"></script> 
 
 	<script>
 		async function loadDivBlocks() {
@@ -102,21 +96,14 @@
 			await loadDivBlocks();
 
 			await new Promise(requestAnimationFrame);
-			// await Footer_fill_ponuky();
-			await LoadTranslations('translations00.txt');
-			await LoadTranslations('translations01-engin.txt');
-			await LoadTranslations('translations07-ref.txt');
-			await LoadTranslations('translations09-foot.txt');
+			await LoadTranslations('enilang/translations00.txt');
+			await LoadTranslations('enilang/translations01-engin.txt');
+			await LoadTranslations('enilang/translations07-ref.txt');
+			await LoadTranslations('enilang/translations09-foot.txt');
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
 			Animator.register("#referencie_animate-id", "animate-slide-in-bounce");
 			Animator.registerAll(".ref-flex-animate-line", "animate-width-grow");
-			// Animator.registerAll(".ref2-animate-line", "animate-width-grow");
-			// Animator.registerAll(".ref3-animate-line", "animate-width-grow");
-			// Animator.registerAll(".ref4-animate-line", "animate-width-grow");
-			// Animator.registerAll(".ref5-animate-line", "animate-width-grow");
-			// Animator.registerAll(".footer-line", "animate-width-grow");
-			// Animator.register("#id-footer-hero-content", "animate-rotateFlipIn");
 
 			const rawHash = window.location.hash.substring(1); // "id-Block_Ref1?x=5&y=6"
 			const targetId = rawHash.split(/[?&]/)[0];         // "id-Block_Ref1"
