--- a/Block_Ref1.html
+++ b/Block_Ref1.html
@@ -57,7 +57,7 @@
 
 						<div class="ref-tooltip-container">
 							<img src="media/klienti/Garrett-logo.png" alt="Garrett logo" class="ref-tooltip-image" style="padding: 0.4vw;"/>
-							<div class="ref-tooltip-text" style="width: 70%;">
+							<div class="ref-tooltip-text">
 								<p><strong lang-code="07005">Realizované služby:</strong></p>
 								<p>konštrukcia turbodúchadiel</p>
 								<p class="ref-tooltip-company">Garrett</p>
