--- a/Block_EnginExt1.html
+++ b/Block_EnginExt1.html
@@ -39,10 +39,10 @@
             </div>
               <p lang-code="01502">U našich zákazníkov realizujeme projekty:</p>
               <ul class="custom-list">
-                <li><strong-500 lang-code="01503">klimatizačných jednotiek</strong-500></li>
-                <li><strong-500 lang-code="01504">turbodúchadiel</strong-500></li>
-                <li><strong-500 lang-code="01505">automatizovaných liniek</strong-500></li>
-                <li><strong-500 lang-code="01506">interiérových a exteriérových dielov automobilov</strong-500></li>
+                <li lang-code="01503">HVAC jednotky (kúrenie, ventilácia, klimatizácia atď.)</li>
+                <li lang-code="01504">turbodúchadiel</li>
+                <li lang-code="01505">automatizovaných výrobných liniek</li>
+                <li lang-code="01506">interiérových a exteriérových dielov automobilov</li>
               </ul>
               <p lang-code="01507">Tu pracujeme so systémami podľa požiadaviek zákazníka.</p>
             <div class="engin-more-info-container">
