--- a/Block_IT.html
+++ b/Block_IT.html
@@ -36,8 +36,8 @@
         <img src="media/Enitech_VasTechnologickyPartner.avif" alt="Background for older browsers">
       </video>
       <div class="uvod-hero-content" id="IT_animate-id">
-        <h1 lang-code="02001">.Informačné technológie</h1>
-        <p lang-code="02002">Effective IT support that expands your possibilities.</p>
+        <h1 lang-code="02001">IT služby</h1>
+        <p lang-code="02002">Komplexné IT riešenia pre telekomunikácie, bankovníctvo, verejnú správu a priemysel</p>
       </div>
     </section>
   </div>
