--- a/Block_Menu.html
+++ b/Block_Menu.html
@@ -46,7 +46,7 @@
       <nav class="uvod-menu">
         <a href="indexOnas.html#top" lang-code="00101">.O nás</a>
         <a href="indexEngin.html#top" lang-code="00102">.Inžiniering</a>
-        <a href="indexIT.html#top" lang-code="00103">.IT služby</a>
+        <a href="indexITN.html#top" lang-code="00103">.IT služby</a>
         <a href="indexManage.html#top" lang-code="00104">.Manažérske služby</a>
         <a href="indexRef.html#top" lang-code="00105">.Referencie</a>
         <a href="indexKariera.html" lang-code="00106">.Kariéra</a>
@@ -66,7 +66,7 @@
     <div id="sideMenu" class="uvod-side-menu">
       <a href="indexOnas.html#top" lang-code="00101" onclick="closeMenu()">.O nás</a>
       <a href="indexEngin.html#top" lang-code="00102" onclick="closeMenu()">.Inžiniering</a>
-      <a href="indexIT.html#top" lang-code="00103" onclick="closeMenu()">.IT služby</a>
+      <a href="indexITN.html#top" lang-code="00103" onclick="closeMenu()">.IT služby</a>
       <a href="indexManage.html#top" lang-code="00104" onclick="closeMenu()">.Manažérske služby</a>
       <a href="indexRef.html#top" lang-code="00105" onclick="closeMenu()">.Referencie</a>
       <a href="indexKariera.html#top" lang-code="00106" onclick="closeMenu()">.Kariéra</a>
