--- a/Block_Footer.html
+++ b/Block_Footer.html
@@ -55,7 +55,8 @@
 					<ul>
 						<li><a href="indexOnas.html#top" lang-code="00101">.O nás</a></li>
 						<li><a href="indexEngin.html#top" lang-code="00102">.Inžiniering</a></li>
-						<li><a href="indexIT.html#top" lang-code="00103">.IT služby</a></li>
+						<li><a href="indexITN.html#top" lang-code="00103">.IT služby</a></li>
+						<li><a href="indexIT.html#top" lang-code="00108">IT stará verzia</a></li>
 						<li><a href="indexManage.html#top" lang-code="00104">.Manažérske služby</a></li>
 						<li><a href="indexRef.html#top" lang-code="00105">.Referencie</a></li>
 						<li><a href="indexKariera.html" lang-code="00106">.Kariéra</a></li>
