--- a/Block_Footer.html
+++ b/Block_Footer.html
@@ -57,7 +57,7 @@
 						<li><a href="indexEngin.html#top" lang-code="00102">.Inžiniering</a></li>
 						<li><a href="indexITN.html#top" lang-code="00103">.IT služby</a></li>
 						<li><a href="indexIT.html#top" lang-code="00108">IT stará verzia</a></li>
-						<li><a href="indexManage.html#top" lang-code="00104">.Manažérske služby</a></li>
+						<!-- <li><a href="indexManage.html#top" lang-code="00104">.Manažérske služby</a></li> -->
 						<li><a href="indexRef.html#top" lang-code="00105">.Referencie</a></li>
 						<li><a href="indexKariera.html" lang-code="00106">.Kariéra</a></li>
 						<li><a href="indexKontakt.html#top" lang-code="00107">.Kontakt</a></li>
