--- a/Block_ITN9.html
+++ b/Block_ITN9.html
@@ -30,11 +30,11 @@
 
 <body>
 	<div id="ITN9-div-src">
-		<div class="itn-body color-variant-itn7">
+		<div class="itn-body color-variant-itn1">
 			<div class="itn-header-line"></div>
-			<div class="itn-header-text">
+			<!-- <div class="itn-header-text">
 				<h1 lang-code="03091">Začnite s nami spolupracovať</h1>
-			</div>
+			</div> -->
 			<div class="itn-content-flex">
 
 				<div class="itn-text-wrapper">
