--- a/Block_Menu.html
+++ b/Block_Menu.html
@@ -47,7 +47,7 @@
         <a href="indexOnas.html#top" lang-code="00101">.O nás</a>
         <a href="indexEngin.html#top" lang-code="00102">.Inžiniering</a>
         <a href="indexITN.html#top" lang-code="00103">.IT služby</a>
-        <a href="indexManage.html#top" lang-code="00104">.Manažérske služby</a>
+        <!-- <a href="indexManage.html#top" lang-code="00104">.Manažérske služby</a> -->
         <a href="indexRef.html#top" lang-code="00105">.Referencie</a>
         <a href="indexKariera.html" lang-code="00106">.Kariéra</a>
         <a href="indexKontakt.html#top" lang-code="00107">.Kontakt</a>
@@ -67,7 +67,7 @@
       <a href="indexOnas.html#top" lang-code="00101" onclick="closeMenu()">.O nás</a>
       <a href="indexEngin.html#top" lang-code="00102" onclick="closeMenu()">.Inžiniering</a>
       <a href="indexITN.html#top" lang-code="00103" onclick="closeMenu()">.IT služby</a>
-      <a href="indexManage.html#top" lang-code="00104" onclick="closeMenu()">.Manažérske služby</a>
+      <!-- <a href="indexManage.html#top" lang-code="00104" onclick="closeMenu()">.Manažérske služby</a> -->
       <a href="indexRef.html#top" lang-code="00105" onclick="closeMenu()">.Referencie</a>
       <a href="indexKariera.html#top" lang-code="00106" onclick="closeMenu()">.Kariéra</a>
       <a href="indexKontakt.html#top" lang-code="00107" onclick="closeMenu()">.Kontakt</a>
