--- a/indexITN.html
+++ b/indexITN.html
@@ -87,18 +87,19 @@
 		async function loadDivBlocks() {
 			const pm = ImportDiv("Block_Menu.html", "Menu-div-src", "Menu-div-dst");
 			const pi = ImportDiv("Block_IT.html", "IT-div-src", "IT-div-dst");
-			const p0 = ImportDiv("Block_ITN0.html", "ITN0-div-src", "ITN0-div-dst");
+			// const p0 = ImportDiv("Block_ITN0.html", "ITN0-div-src", "ITN0-div-dst");
 			const p1 = ImportDiv("Block_ITN1.html", "ITN1-div-src", "ITN1-div-dst");
 			const p2 = ImportDiv("Block_ITN2.html", "ITN2-div-src", "ITN2-div-dst");
 			const p3 = ImportDiv("Block_ITN3.html", "ITN3-div-src", "ITN3-div-dst");
 			const p4 = ImportDiv("Block_ITN4.html", "ITN4-div-src", "ITN4-div-dst");
 			const p5 = ImportDiv("Block_ITN5.html", "ITN5-div-src", "ITN5-div-dst");
-			const p6 = ImportDiv("Block_ITN6.html", "ITN6-div-src", "ITN6-div-dst");
-			const p7 = ImportDiv("Block_ITN7.html", "ITN7-div-src", "ITN7-div-dst");
-			const p8 = ImportDiv("Block_ITN8.html", "ITN8-div-src", "ITN8-div-dst");
+			// const p6 = ImportDiv("Block_ITN6.html", "ITN6-div-src", "ITN6-div-dst");
+			// const p7 = ImportDiv("Block_ITN7.html", "ITN7-div-src", "ITN7-div-dst");
+			// const p8 = ImportDiv("Block_ITN8.html", "ITN8-div-src", "ITN8-div-dst");
 			const p9 = ImportDiv("Block_ITN9.html", "ITN9-div-src", "ITN9-div-dst");
 			const pf = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-			await Promise.all([pm, pi, p0, p1, p2, p3, p4, p5, p6, p8, p9, pf]);
+			await Promise.all([pm, pi, p1, p2, p3, p4, p5, p9, pf]);
+			// await Promise.all([pm, pi, p0, p1, p2, p3, p4, p5, p6, p8, p9, pf]);
 		}
 		async function loadAllTranslations() {
 			const p1 = LoadTranslations('enilang/translations00.txt');
