--- a/Block_ITN2.html
+++ b/Block_ITN2.html
@@ -59,7 +59,7 @@
 					<div class="itn-grid2x2-logo">
 					<img src="media/KD_vodotlac-open.svg" alt="Logo 3">
 					</div>
-					<h3 lang-code="03027">Developeri vaetkých úrovní seniority</h3>
+					<h3 lang-code="03027">Developeri všetkých úrovní seniority</h3>
 					<p lang-code="03028">Od juniorov po seniorov s rozsiahlymi skúsenosťami</p>
 				</div>
 				<div class="itn-grid2x2-cell">
