--- a/Block_ITN5.html
+++ b/Block_ITN5.html
@@ -85,7 +85,7 @@
 						<div class="itn-O-line"></div>
 						<p>
 							<h3 lang-code="03553">Dátový manažment</h3>
-							<span lang-code="03554">Správa a správa firemných dát</span>
+							<span lang-code="03554">Manažment a správa firemných dát</span>
 						</p>
 					</div>
 
