--- a/Block_ITN9.html
+++ b/Block_ITN9.html
@@ -30,7 +30,7 @@
 
 <body>
 	<div id="ITN9-div-src">
-		<div class="itn-body color-variant-itn1">
+		<div class="itn-body color-variant-itn9">
 			<div class="itn-header-line"></div>
 			<!-- <div class="itn-header-text">
 				<h1 lang-code="03091">Začnite s nami spolupracovať</h1>
@@ -51,7 +51,7 @@
 					</p>
 					<div class="itn-buttons flex-start">
 						<button class="itn-button" lang-code="03095"
-							onclick="location.href='indexKontakt.html'">Napíšte nám</button>
+							onclick="location.href='indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska'">Napíšte nám</button>
 						<button class="itn-button" lang-code="03096" 
 							onclick="location.href='indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska'">Zavolajte nám</button>
 					</div>
