--- a/Block_ITN4.html
+++ b/Block_ITN4.html
@@ -32,7 +32,7 @@
 	<div id="ITN4-div-src">
 		<div class="itn-body color-variant-itn4">
 			<div class="itn-header-line"></div>
-			<div class="itn-content-flex">
+			<div class="itn-content-flex fullstack-flex">
 				<div class="itn-text-wrapper">
 					<h1 lang-code="03041">Fullstack vývojové schopnosti</h1>
 					<div class="itn-fullstack-flex">
@@ -46,7 +46,7 @@
 									<h3>FrontEnd</h3>
 									<p class="margin-small" lang-code="03042">
 										Moderné užívateľské rozhrania a responzívne webové aplikácie s
-										najnovšími technológiami.
+										najnovšími technológiami (Angular, JavaScript, REACT, VUE.js, HTML, CSS a iné).
 									</p>
 								</div>
 							</div>
@@ -55,7 +55,7 @@
 									<h3>BackEnd</h3>
 									<p class="margin-small" lang-code="03043">
 										Robustné serverové aplikácie, API a databázové riešenia pre náročné
-										systémy.
+										systémy (Java, Python, C#/.NET, ASP.NET, NODEjs, PHP a ďalšie).
 									</p>
 								</div>
 							</div>
@@ -63,7 +63,11 @@
 								<div class="itn-innerflex-text">
 									<h3>FullStack</h3>
 									<p class="margin-small" lang-code="03044">
-										Kompletné end-to-end riešenia pokrývajúce všetky vrstvy aplikácie.
+										Zahŕňa širokú škálu technológií pre front-end (používateľské rozhranie) aj back-end (logika na strane servera), 
+										ako aj databázy a ďalšie nástroje. Medzi kľúčové front-endové technológie patrí HTML, CSS a JavaScript spolu
+										s frameworkami ako React, Angular alebo Vue.js. Back-endové technológie zahŕňajú jazyky ako Node.js, Python, Java 
+										a frameworky ako Express.js, Django alebo Spring Boot. Databázy, ako napríklad MySQL, PostgreSQL alebo MongoDB, 
+										sa používajú na ukladanie údajov, zatiaľ čo nástroje ako Git a Docker sú nevyhnutné pre správu verzií a nasadzovanie.
 									</p>
 								</div>
 							</div>
