--- a/Block_ITN3.html
+++ b/Block_ITN3.html
@@ -56,10 +56,13 @@
 					<p class="margin-small" lang-code="03034">Naše služby pokrývajú široké spektrum expertíz:</p>
 					<ul class="itn-custom-list">
 						<li lang-code="03035">Vývojári HW/SW a aplikácií s preukázanými skúsenosťami</li>
-						<li lang-code="03036">Programátori databáz a dátových štruktúr</li>
-						<li lang-code="03037">SAP špecialisti pre podnikové systémy</li>
+						<li lang-code="03036">Programátori databáz a dátových štruktúr (na báze SQL: Oracle, MySQL, PostgreSQL alebo NoSQL: MongoDB)</li>
+						<li lang-code="03037">SAP špecialisti pre podnikové systémy (S/4HANA špecialisti, ABAP developeri a konzultanti riešení)</li>
 						<li lang-code="03038">CRM špecialisti pre riadenie vzťahov so zákazníkmi</li>
 						<li lang-code="03039">Experti na kybernetickú bezpečnosť a ochranu dát</li>
+						<li lang-code="03531">Testeri (špecialisti na manuálne, automatizované, performačné alebo záťažové testy)</li>
+						<li lang-code="03532">Embedded C vývojári pre vývoj Vašich embedovaných zariadení (operačné systémy do vozidiel
+							 a lietadiel, ADAC systémy, dotykové panely, komunikačné zariadenia a iné.)</li>
 					</ul>
 				</div>
 
