--- a/Block_ITN3.html
+++ b/Block_ITN3.html
@@ -30,14 +30,14 @@
 
 <body>
 	<div id="ITN3-div-src">
-		<div class="itn-body color-variant-itn3">
+		<div class="itn-body color-variant-itn1">
 			<div class="itn-header-line"></div>
 			<div class="itn-header-text">
 				<h1 lang-code="03031">IT Nearshoring a Outsourcing na mieru</h1>
 			</div>
 			<div class="itn-content-flex column-reverse">
 
-				<div class="itn-img-wrapper" style="flex: 3.5;">
+				<div class="itn-img-wrapper">
 					<div class="itn-img-wrapper-inner">
 						<img src="media/KD_teamMeating5ludi.avif" />
 					</div>
