--- a/Block_ITN4.html
+++ b/Block_ITN4.html
@@ -30,7 +30,7 @@
 
 <body>
 	<div id="ITN4-div-src">
-		<div class="itn-body color-variant-itn4">
+		<div class="itn-body color-variant-itn2">
 			<div class="itn-header-line"></div>
 			<div class="itn-content-flex fullstack-flex">
 				<div class="itn-text-wrapper">
@@ -42,7 +42,7 @@
 
 						<div class="itn-fullstack-texts">
 							<div class="itn-innerflex-container">
-								<div class="itn-innerflex-text">
+								<div class="itn-innerflex-text padding-0">
 									<h3>FrontEnd</h3>
 									<p class="margin-small" lang-code="03042">
 										Moderné užívateľské rozhrania a responzívne webové aplikácie s
@@ -51,7 +51,7 @@
 								</div>
 							</div>
 							<div class="itn-innerflex-container">
-								<div class="itn-innerflex-text">
+								<div class="itn-innerflex-text padding-0">
 									<h3>BackEnd</h3>
 									<p class="margin-small" lang-code="03043">
 										Robustné serverové aplikácie, API a databázové riešenia pre náročné
@@ -60,7 +60,7 @@
 								</div>
 							</div>
 							<div class="itn-innerflex-container">
-								<div class="itn-innerflex-text">
+								<div class="itn-innerflex-text padding-0">
 									<h3>FullStack</h3>
 									<p class="margin-small" lang-code="03044">
 										Zahŕňa širokú škálu technológií pre front-end (používateľské rozhranie) aj back-end (logika na strane servera), 
@@ -82,7 +82,7 @@
 					</p>
 				</div>
 
-				<div class="itn-img-wrapper" style="flex: 3.5;">
+				<div class="itn-img-wrapper">
 					<div class="itn-img-wrapper-inner">
 						<img src="media/KD_DisplayZvislo.avif" />
 					</div>
