--- a/Block_ITN5.html
+++ b/Block_ITN5.html
@@ -30,7 +30,7 @@
 
 <body>
 	<div id="ITN5-div-src">
-		<div class="itn-body color-variant-itn5">
+		<div class="itn-body color-variant-itn1">
 			<div class="itn-header-line"></div>
 			<div class="itn-header-text">
 				<h1 lang-code="03051">Riadenie a koordinácia IT projektov</h1>
@@ -91,7 +91,7 @@
 
 				</div>
 
-				<div class="itn-img-wrapper" style="flex: 4.5;">
+				<div class="itn-img-wrapper">
 					<div class="itn-img-wrapper-grid21">
 						<div class="itn-img-wrapper-inner">
 							<img src="media/KD_OkoloStolaPodLampami.avif" />
