--- a/Block_ITN9.html
+++ b/Block_ITN9.html
@@ -49,7 +49,7 @@
 						požiadavky a navrhnúť riešenie šité na mieru vášmu biznisu. Tešíme sa
 						na spoluprácu s vami.
 					</p>
-					<div class="itn-buttons flex-start">
+					<div class="itn-buttons flex-justify">
 						<button class="itn-button" lang-code="03095"
 							onclick="location.href='indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska'">Napíšte nám</button>
 						<button class="itn-button" lang-code="03096" 
